k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ledger-api

spec:
  replicas: 5

  selector:
    matchLabels:
      app: ledger-api

  template:
    metadata:
      labels:
        app: ledger-api

    spec:
      containers:
      - name: ledger-api
        image: ghcr.io/omprakash458/ledger-api:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
