k8s/service.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: ledger-api-service

spec:
  selector:
    app: ledger-api

  ports:
  - port: 80
    targetPort: 5000

  type: NodePort
