k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ledger-api-ingress

spec:
  ingressClassName: nginx

  rules:
  - host: ledger.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ledger-api-service
            port:
              number: 80

  - host: nginx.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
